--- a/index.html
+++ b/index.html
@@ -10,54 +10,62 @@
 </head>
 
 <body>
-	
-	<div class="container text-center">
-		<div class="card-white">
-			<h1>Hello, I'm Thibault 💥</h1>
-			<img src="images/portrait.jpeg" alt="Thibault Colié" id="portrait"class="img-circle img-bordered"> 
-			<p>
-				I love sports in general but especially football ⚽️, cryptocurrencies, and shoes 👟. My favorite football team is Olympique de Marseille ⚪️🔵.
-			</p>
-			<a href="https://www.om.fr" target="_blank" class="button"><strong>Best french club's official site</strong></a>
-		</div>
-		<div class="card-white">
-			<h2> Football ⚽️ </h2>	
-			<p> I am passionate about Football and my favorite team is <strong>Olympique de Marseille</strong>. I am actually playing for Lazio Rhum in the Burdigala championship.
-			</p>
-		</div>
-		<div class="card-white">
-			<h2> Cryptocurrencies <i class="fa-brands fa-bitcoin"></i></h2>	
-			<p> I am passionate about crypto-currencies and have already invested in some of them.
-			</p>
-		</div>
-		<div class="card-white">
-			<h2> Shoes </h2>	
-			<p> I am passionate about Shoes's market and If I could I would buy tons of shoes that I love.
-			</p>
-		</div>
-		<div class="card-white">
-			<h2>Follow me</h2>
-			<ul class="list-inline">
-				<li>
-					<a href="https://www.facebook.com/thibault.colie" target="_blank">
-						<i class="fab fa-facebook-f"></i> Facebook 
-					</a>
-				</li>
-				<li>
-					<a href="https://www.linkedin.com/in/thibault-coli%C3%A9-708030223/" target="_blank">
-						<i class="fab fa-linkedin-in"></i> Linkedin
-					</a>
-				</li>
-				<li>
-					<a href="https://www.instagram.com/thibault29_04/?hl=fr" target="_blank">
-						<i class="fab fa-instagram"></i> Instagram
-					</a>
-				</li>
-			</ul>
+	<div class="sidebar">
+		<ul>
+			<li><a href="#about">About me</a></li>
+			<li><a href="#football">Football</a></li>
+			<li><a href="#crypto">Cryptocurrencies</a></li>
+			<li><a href="#shoes">Shoes</a></li>
+			<li><a href="#follow">Follow me</a></li>
+		</ul>
+	</div>
+	<div class="page-content">
+		<div class="container text-center">
+			<div id="about" class="card-white">
+				<h1>Hello, I'm Thibault 💥</h1>
+				<img src="images/portrait.jpeg" alt="Thibault Colié" id="portrait"class="img-circle img-bordered"> 
+				<p>
+					I love sports in general but especially football ⚽️, cryptocurrencies, and shoes 👟. My favorite football team is Olympique de Marseille ⚪️🔵.
+				</p>
+				<a href="https://www.om.fr" target="_blank" class="button"><strong>Best french club's official site</strong></a>
+			</div>
+			<div id="football" class="card-white">
+				<h2> Football ⚽️ </h2>	
+				<p> I am passionate about Football and my favorite team is <strong>Olympique de Marseille</strong>. I am actually playing for Lazio Rhum in the Burdigala championship.
+				</p>
+			</div>
+			<div id="crypto" class="card-white">
+				<h2> Cryptocurrencies <i class="fa-brands fa-bitcoin"></i></h2>	
+				<p> I am passionate about crypto-currencies and have already invested in some of them.
+				</p>
+			</div>
+			<div id="shoes" class="card-white">
+				<h2> Shoes </h2>	
+				<p> I am passionate about Shoes's market and If I could I would buy tons of shoes that I love.
+				</p>
+			</div>
+			<div id="follow" class="card-white">
+				<h2>Follow me</h2>
+				<ul class="list-inline">
+					<li>
+						<a href="https://www.facebook.com/thibault.colie" target="_blank">
+							<i class="fab fa-facebook-f"></i> Facebook 
+						</a>
+					</li>
+					<li>
+						<a href="https://www.linkedin.com/in/thibault-coli%C3%A9-708030223/" target="_blank">
+							<i class="fab fa-linkedin-in"></i> Linkedin
+						</a>
+					</li>
+					<li>
+						<a href="https://www.instagram.com/thibault29_04/?hl=fr" target="_blank">
+							<i class="fab fa-instagram"></i> Instagram
+						</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</div>
 </body>
 
 </html>
-
-
